# k8s-tui

./: .gitignore  Cargo.toml  README.md  build-linux.sh
.github/workflows/: rust-clippy.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md
src/: app.rs  app_test.rs  app_tests.rs  config.rs  event.rs  k8s.rs  main.rs  ui.rs
src/components/: confirm_dialog.rs  container_selector.rs  context_selector.rs  help_popup.rs  log_viewer.rs  mod.rs  namespace_selector.rs  resource_detail.rs  search_bar.rs  tests.rs
