[package]
name = "k8s-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI 框架与终端控制
ratatui = "0.29"
crossterm = "0.28"

# K8s 客户端
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化与配置
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 工具库
chrono = "0.4"
dirs = "5.0"
futures = "0.3"

[dev-dependencies]
mockall = "0.14.0"
tokio-test = "0.4.5"
